--- a/Doan_sosuckhoe/app/src/main/res/layout/activity_personal_infomation.xml
+++ b/Doan_sosuckhoe/app/src/main/res/layout/activity_personal_infomation.xml
@@ -41,7 +41,7 @@
                     android:layout_centerInParent="true"
                     android:fontFamily="sans-serif-black"
                     android:gravity="center_horizontal"
-                    android:text="Thông Tin Cá Nhân"
+                    android:text="@string/personalprofile"
                     android:textColor="@color/black"
                     android:textSize="25dp" />
             </RelativeLayout>
@@ -121,7 +121,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
                             android:layout_marginTop="10dp"
-                            android:text="Thông tin chung"
+                            android:text="@string/basicinfo"
                             android:textColor="@color/black"
                             android:textSize="18dp" />
 
@@ -144,7 +144,7 @@
                             android:layout_height="48dp"
                             android:layout_marginTop="20dp"
                             android:background="@drawable/custom_madicine1"
-                            android:hint="Họ và Tên"
+                            android:hint="@string/fullname"
                             android:inputType="textPersonName"
                             android:paddingLeft="20dp" />
 
@@ -154,7 +154,7 @@
                             android:layout_height="48dp"
                             android:layout_marginTop="20dp"
                             android:background="@drawable/custom_madicine1"
-                            android:hint="Ngày Tháng Năm Sinh"
+                            android:hint="@string/dob"
                             android:inputType="textPersonName"
                             android:paddingLeft="20dp" />
 
@@ -172,7 +172,7 @@
                                 android:id="@+id/GenderMale"
                                 android:layout_width="wrap_content"
                                 android:layout_height="48dp"
-                                android:text="Nam" />
+                                android:text="@string/male" />
 
                             <CheckBox
                                 android:id="@+id/GenderFemale"
@@ -180,7 +180,7 @@
                                 android:layout_weight="1"
                                 android:layout_width="wrap_content"
                                 android:layout_height="48dp"
-                                android:text="Nữ" />
+                                android:text="@string/female" />
                         </LinearLayout>
 
                         <EditText
@@ -189,7 +189,7 @@
                             android:layout_height="48dp"
                             android:layout_margin="10dp"
                             android:background="@drawable/custom_madicine1"
-                            android:hint="Số điện thoại"
+                            android:hint="@string/phonenumber"
                             android:inputType="textPersonName"
                             android:paddingLeft="20dp" />
 
@@ -199,7 +199,7 @@
                             android:layout_height="48dp"
                             android:layout_margin="10dp"
                             android:background="@drawable/custom_madicine1"
-                            android:hint="Mã số bảo hiểm y tế"
+                            android:hint="@string/healthid"
                             android:inputType="textPersonName"
                             android:paddingLeft="20dp" />
 
@@ -209,7 +209,7 @@
                             android:layout_height="48dp"
                             android:layout_margin="10dp"
                             android:background="@drawable/custom_madicine1"
-                            android:hint="Số hộ chiếu/CMNN/CCCD"
+                            android:hint="@string/personalid"
                             android:inputType="textPersonName"
                             android:paddingLeft="20dp" />
 
@@ -219,7 +219,7 @@
                             android:layout_height="48dp"
                             android:layout_margin="10dp"
                             android:background="@drawable/custom_madicine1"
-                            android:hint="Địa chỉ"
+                            android:hint="@string/address"
                             android:inputType="textPersonName"
                             android:paddingLeft="20dp" />
                         <EditText
@@ -246,7 +246,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
                             android:layout_margin="10dp"
-                            android:text="Thông tin bệnh lý"
+                            android:text="@string/personalhealthinfo"
                             android:textColor="@color/black"
                             android:textSize="18dp" />
 
@@ -269,7 +269,7 @@
                             android:layout_height="40dp"
                             android:layout_margin="10dp"
                             android:background="@drawable/custom_madicine1"
-                            android:hint="Nhóm máu"
+                            android:hint="@string/bloodtype"
                             android:inputType="textPersonName" />
 
                         <EditText
@@ -279,7 +279,7 @@
                             android:layout_height="40dp"
                             android:layout_margin="10dp"
                             android:background="@drawable/custom_madicine1"
-                            android:hint="Cân nặng"
+                            android:hint="@string/weight"
                             android:inputType="textPersonName" />
 
                         <EditText
@@ -289,7 +289,7 @@
                             android:layout_height="40dp"
                             android:layout_margin="10dp"
                             android:background="@drawable/custom_madicine1"
-                            android:hint="Chiều cao"
+                            android:hint="@string/height"
                             android:inputType="textPersonName" />
                         <EditText
                             android:id="@+id/txt_tieusu"
@@ -300,7 +300,7 @@
                             android:layout_height="200dp"
                             android:layout_margin="10dp"
                             android:background="@drawable/custom_madicine1"
-                            android:hint="Tiểu sử"
+                            android:hint="@string/profile"
                             android:inputType="textPersonName" />
                     </LinearLayout>
                     <!-- thông tin bệnh lý end-->
@@ -319,7 +319,7 @@
                             android:textColor="#fff"
                             android:layout_width="150dp"
                             android:layout_height="wrap_content"
-                            android:text="Hủy bỏ"
+                            android:text="@string/Cancel"
                             android:textSize="20dp"
 
                             />
@@ -328,7 +328,7 @@
                             android:textColor="#fff"
                             android:layout_width="150dp"
                             android:layout_height="wrap_content"
-                            android:text="Lưu"
+                            android:text="@string/Save"
                             android:textSize="20dp"
 
                             />
