--- a/Doan_sosuckhoe/app/src/main/res/layout/activity_healthindex.xml
+++ b/Doan_sosuckhoe/app/src/main/res/layout/activity_healthindex.xml
@@ -39,7 +39,7 @@
                     android:layout_centerInParent="true"
                     android:fontFamily="sans-serif-black"
                     android:gravity="center_horizontal"
-                    android:text="Chỉ Số Sức Khỏe"
+                    android:text="@string/bmi"
                     android:textColor="@color/black"
                     android:textSize="25dp" />
             </RelativeLayout>
@@ -80,7 +80,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
                             android:layout_margin="10dp"
-                            android:text="Thông tin về cơ bản"
+                            android:text="@string/basicinfo"
                             android:textColor="@color/black"
                             android:textSize="18dp" />
 
@@ -103,7 +103,7 @@
                             android:layout_height="48dp"
                             android:layout_margin="10dp"
                             android:background="@drawable/custom_madicine1"
-                            android:hint="Chiều cao"
+                            android:hint="@string/height"
                             android:inputType="textPersonName"
                             android:paddingLeft="20dp" />
 
@@ -113,7 +113,7 @@
                             android:layout_height="48dp"
                             android:layout_margin="10dp"
                             android:background="@drawable/custom_madicine1"
-                            android:hint="Cân nặng"
+                            android:hint="@string/weight"
                             android:inputType="textPersonName"
                             android:paddingLeft="20dp" />
 
@@ -123,7 +123,7 @@
                             android:layout_height="48dp"
                             android:layout_margin="10dp"
                             android:background="@drawable/custom_madicine1"
-                            android:hint="Huyết áp"
+                            android:hint="@string/systolic"
                             android:inputType="textPersonName"
                             android:paddingLeft="20dp" />
 
@@ -133,7 +133,7 @@
                             android:layout_height="48dp"
                             android:layout_margin="10dp"
                             android:background="@drawable/custom_madicine1"
-                            android:hint="Nhịp tim"
+                            android:hint="@string/diastolic"
                             android:inputType="textPersonName"
                             android:paddingLeft="20dp" />
 
@@ -149,7 +149,7 @@
                             android:textColor="#fff"
                             android:layout_width="250dp"
                             android:layout_height="wrap_content"
-                            android:text="Bạn có khỏe không?"
+                            android:text="@string/checkurbmi"
                             android:textSize="20dp"
 
                             />
@@ -171,8 +171,9 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:layout_margin="10dp"
+                        android:layout_margintop="10dp"
                         android:gravity="center"
+                        android:layout_marginBottom="40dp"
                         android:orientation="horizontal"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
@@ -181,7 +182,7 @@
                             android:textColor="#fff"
                             android:layout_width="250dp"
                             android:layout_height="wrap_content"
-                            android:text="Nhận tư vấn ngay"
+                            android:text="@string/onlinesupport"
                             android:textSize="20dp" />
                     </LinearLayout>
                 </LinearLayout>
