--- a/Doan_sosuckhoe/app/src/main/res/layout/activity_medicalappointment.xml
+++ b/Doan_sosuckhoe/app/src/main/res/layout/activity_medicalappointment.xml
@@ -48,7 +48,7 @@
                         android:layout_centerInParent="true"
                         android:fontFamily="sans-serif-black"
                         android:gravity="center_horizontal"
-                        android:text="Đặt Lịch Hẹn Khám"
+                        android:text="@string/setamedicalappointment"
                         android:textColor="@color/black"
                         android:textSize="25dp" />
                 </RelativeLayout>
@@ -88,7 +88,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_margin="10dp"
-                            android:text="Thông tin về lịch hẹn"
+                            android:text="@string/appointmentinfo"
                             android:textColor="@color/black"
                             android:textSize="18dp" />
 
@@ -111,7 +111,7 @@
                             android:layout_height="48dp"
                             android:layout_margin="10dp"
                             android:background="@drawable/custom_madicine1"
-                            android:hint="Bệnh viện"
+                            android:hint="@string/hospitalname"
                             android:inputType="textPersonName"
                             android:paddingLeft="20dp" />
 
@@ -121,7 +121,7 @@
                             android:layout_height="48dp"
                             android:layout_margin="10dp"
                             android:background="@drawable/custom_madicine1"
-                            android:hint="Khoa"
+                            android:hint="@string/majority"
                             android:inputType="textPersonName"
                             android:paddingLeft="20dp" />
 
@@ -131,7 +131,7 @@
                             android:layout_height="48dp"
                             android:layout_margin="10dp"
                             android:background="@drawable/custom_madicine1"
-                            android:hint="Bác sĩ"
+                            android:hint="@string/doctorname"
                             android:inputType="textPersonName"
                             android:paddingLeft="20dp" />
 
@@ -141,7 +141,7 @@
                             android:layout_height="48dp"
                             android:layout_margin="10dp"
                             android:background="@drawable/custom_madicine1"
-                            android:hint="Thời gian"
+                            android:hint="@string/time"
                             android:inputType="textPersonName"
                             android:paddingLeft="20dp" />
 
@@ -151,7 +151,7 @@
                             android:layout_height="48dp"
                             android:layout_margin="10dp"
                             android:background="@drawable/custom_madicine1"
-                            android:hint="Lý do khám"
+                            android:hint="@string/Reason"
                             android:inputType="textPersonName"
                             android:paddingLeft="20dp" />
 
@@ -161,7 +161,7 @@
                             android:layout_height="48dp"
                             android:layout_margin="10dp"
                             android:background="@drawable/custom_madicine1"
-                            android:hint="Ghi chú thêm"
+                            android:hint="@string/Note"
                             android:inputType="textPersonName"
                             android:paddingLeft="20dp" />
 
@@ -178,7 +178,7 @@
                             android:textColor="#fff"
                             android:layout_width="150dp"
                             android:layout_height="wrap_content"
-                            android:text="Lưu"
+                            android:text="Save"
                             android:textSize="20dp"
                             />
                     </LinearLayout>
@@ -195,7 +195,7 @@
                             android:layout_marginLeft="20dp"
                             android:layout_margin="10dp"
                             android:fontFamily="sans-serif-black"
-                            android:text="Lịch đã đặt"
+                            android:text="@string/appointmentnow"
                             android:textColor="@color/black"
                             android:textSize="25dp" />
 
@@ -226,14 +226,14 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:fontFamily="sans-serif-black"
-                                    android:text="Lịch hẹn khám"
+                                    android:text="@string/Appointment"
                                     android:textColor="@color/black"
                                     android:textSize="25dp" />
 
                                 <TextView
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:text="8:30 bệnh viện K"
+                                    android:text="@string/appointmentdetails"
                                     android:textColor="@color/black"
                                     android:textSize="15dp" />
 
