--- a/Doan_sosuckhoe/app/src/main/res/layout/activity_healthindex.xml
+++ b/Doan_sosuckhoe/app/src/main/res/layout/activity_healthindex.xml
@@ -171,7 +171,7 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:layout_margintop="10dp"
+                        android:layout_marginTop="10dp"
                         android:gravity="center"
                         android:layout_marginBottom="40dp"
                         android:orientation="horizontal"
